<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorLightGrey2">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorToolBar"
        app:title="@string/gym_tab" />


    <Button
        android:id="@+id/bCategoryFirst"
        style="@style/TextCategory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:text="@string/category_rear_text"
         />

    <Button
        android:textStyle="bold"
        android:id="@+id/bCategorySecond"
        style="@style/TextCategory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/category_legs_text" />

    <Button
        android:textStyle="bold"
        android:id="@+id/bCategoryThird"
        style="@style/TextCategory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/category_arms_text" />


</LinearLayout>