<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/viewToolbarProfileTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorToolBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/profile_tab" />

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintRight_toLeftOf="@id/tvWeightText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewToolbarProfileTab"
        app:layout_constraintBottom_toBottomOf="@id/tvIndexDescription"/>

    <TextView
        android:id="@+id/tvWeightText"
        style="@style/TextStyleProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text="@string/weight_text"
        app:layout_constraintLeft_toRightOf="@id/ivPhoto"
        app:layout_constraintRight_toLeftOf="@id/etWeight"
        app:layout_constraintTop_toBottomOf="@id/viewToolbarProfileTab"
        app:layout_constraintBottom_toTopOf="@id/etHeight"/>

    <EditText
        android:id="@+id/etWeight"
        style="@style/TextStyleProfileEmpty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_green_dark"
        android:gravity="center"
        android:textSize="16sp"
        android:hint="@string/weight_text_empty"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@id/tvWeightText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewToolbarProfileTab" />

    <TextView
        android:id="@+id/tvHeightText"
        style="@style/TextStyleProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text="@string/height_text"
        app:layout_constraintLeft_toRightOf="@id/ivPhoto"
        app:layout_constraintRight_toLeftOf="@id/etWeight"
        app:layout_constraintTop_toBottomOf="@id/tvWeightText"
        app:layout_constraintBottom_toBottomOf="@id/etHeight"/>

    <EditText
        android:id="@+id/etHeight"
        style="@style/TextStyleProfileEmpty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/height_text_empty"
        android:textSize="16sp"
        android:textColor="@android:color/holo_green_dark"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@id/tvHeightText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etWeight"  />

    <TextView
        android:id="@+id/tvIndexWeightText"
        style="@style/TextStyleProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/index_weight_text"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="@id/ivPhoto"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etHeight" />

    <TextView
        android:id="@+id/tvIndexWeight"
        style="@style/TextStyleProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/index_text"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintLeft_toRightOf="@id/ivPhoto"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvIndexWeightText" />

    <TextView
        android:id="@+id/tvIndexDescription"
        style="@style/TextStyleProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="@id/ivPhoto"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvIndexWeight" />

    <Button
        android:id="@+id/btnProgress"
        style="@style/TextStyleProfile"
        android:layout_width="0dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_arrow"
        android:gravity="center_horizontal|center_vertical"
        android:background="@drawable/exercise_item"
        android:text="@string/progress_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvIndexDescription" />

    <WebView
        android:id="@+id/wvChart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnProgress" />

</androidx.constraintlayout.widget.ConstraintLayout>