<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/viewImageExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3" />

    <TextView
        android:id="@+id/viewTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="7dp"
        android:layout_weight="2"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:background="@drawable/exercise_item"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/exercise_item">

        <TextView
            style="@style/TextStyleSmall"
            android:id="@+id/viewSetExercise"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/set_exercise_text"
            app:layout_constraintBottom_toTopOf="@id/viewSetAmountExercise"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/viewWeightText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextStyleSmall"
            android:id="@+id/viewSetAmountExercise"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/viewWeightText"
            app:layout_constraintTop_toBottomOf="@id/viewSetExercise" />

        <TextView
            style="@style/TextStyleSmall"
            android:id="@+id/viewText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/weight_text"
            app:layout_constraintBottom_toTopOf="@id/viewSetAmountExercise"
            app:layout_constraintLeft_toRightOf="@id/viewSetExercise"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText

            android:id="@+id/viewWeightText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/weight_exercise_text"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/viewSetExercise"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/viewStartExerciseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/exercise_item"
        android:text="@string/start_exercise_text" />

    <Button
        android:id="@+id/viewTimerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="7dp"
        android:background="@drawable/button_circle"
        android:text="1:00" />


    <Button
        android:id="@+id/viewEndExerciseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/exercise_item"
        android:text="@string/end_exercise_text" />


</LinearLayout>